--- a/EC03-Huaytalla/PRJ_CRUD_SPRING_BOOT/src/main/resources/templates/form.html
+++ b/EC03-Huaytalla/PRJ_CRUD_SPRING_BOOT/src/main/resources/templates/form.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <title>JAVA Developer - Escuela</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-$END$
+
+<div th:replace="fragments/header :: header"></div>
+
+<div class="container " style="margin-top:90px ;" >
+    <h1>
+        Cursos
+    </h1>
+
+    <div th:object="${curso}" th:remove="tag">
+        <ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+            <li th:each="err: ${#fields.errors('*')}" th:text="${err}"></li>
+        </ul>
+    </div>
+    <form th:action="@{/form}" th:object="${curso}" method="post">
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Nombre</label>
+            <div class="col-sm-6">
+                <input type="text" th:field="*{nombre}" class="form-control"
+                       th:errorclass="'form-control alert-danger'" /> <small
+                    class="form-text text-danger"
+                    th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Creditos</label>
+            <div class="col-sm-6">
+                <input type="text" th:field="*{creditos}" class="form-control"
+                       th:errorclass="'form-control alert-danger'" /> <small
+                    class="form-text text-danger"
+                    th:if="${#fields.hasErrors('creditos')}" th:errors="*{creditos}"></small>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <div class="col-sm-6">
+                <input type="submit" value="Crear Curso" class="btn btn-primary" />
+            </div>
+        </div>
+
+    </form>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" ></script>
 </body>
 </html>
+
+
