--- a/EC03-Huaytalla/PRJ_CRUD_SPRING_BOOT/src/main/resources/templates/formAlumno.html
+++ b/EC03-Huaytalla/PRJ_CRUD_SPRING_BOOT/src/main/resources/templates/formAlumno.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <title>JAVA Developer - Escuela</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-$END$
+
+<div th:replace="fragments/header :: header"></div>
+
+<div class="container" style="margin-top:90px;">
+    <h1>
+        Alumno
+    </h1>
+
+    <div th:object="${alumno}" th:remove="tag">
+        <ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+            <li th:each="err: ${#fields.errors('*')}" th:text="${err}"></li>
+        </ul>
+    </div>
+    <form th:action="@{/formAlumno}" th:object="${alumno}" method="post">
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Nombres</label>
+            <div class="col-sm-6">
+                <input type="text" th:field="*{nombres}" class="form-control"
+                       th:errorclass="'form-control alert-danger'" />
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('nombres')}" th:errors="*{nombres}"></small>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Apellidos</label>
+            <div class="col-sm-6">
+                <input type="text" th:field="*{apellidos}" class="form-control"
+                       th:errorclass="'form-control alert-danger'" />
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}"></small>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Fecha de Nacimiento</label>
+            <div class="col-sm-6">
+                <input type="date" th:field="*{fechanacimiento}" class="form-control"
+                       th:errorclass="'form-control alert-danger'" />
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('fechanacimiento')}" th:errors="*{fechanacimiento}"></small>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Sexo</label>
+            <div class="col-sm-6">
+                <select th:field="*{sexo}" class="form-control">
+                    <option value="M">Masculino</option>
+                    <option value="F">Femenino</option>
+                </select>
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('sexo')}" th:errors="*{sexo}"></small>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <div class="col-sm-6">
+                <input type="submit" value="Crear Alumno" class="btn btn-primary" />
+            </div>
+        </div>
+
+    </form>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
