--- a/S12/S12_APLI01/src/main/resources/templates/estudiantes/lista.html
+++ b/S12/S12_APLI01/src/main/resources/templates/estudiantes/lista.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Gestión de Estudiantes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Lista de Estudiantes</h1>
-<table>
-    <thead>
-    <tr>
-        <th>Nombre</th>
-        <th>Apellido</th>
-        <th>Correo</th>
-        <th>Carrera</th>
-        <th>Acciones</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="estudiante : ${estudiantes}">
-        <td th:text="${estudiante.nombre}"></td>
-        <td th:text="${estudiante.apellido}"></td>
-        <td th:text="${estudiante.correo}"></td>
-        <td th:text="${estudiante.carrera}"></td>
-        <td>
-            <a th:href="@{/estudiantes/editar/{id}(id=${estudiante.id})}">Editar</a> |
-            <a th:href="@{/estudiantes/eliminar/{id}(id=${estudiante.id})}">Eliminar</a>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<a href="/estudiantes/crear">Crear Estudiante</a>
+<div class="container" style="margin-top: 90px;">
+    <h1>Listado de Estudiantes</h1>
+
+    <div style="padding: 10px;">
+        <p><a th:href="@{/estudiantes/crear}" class="btn btn-success btn-xs">Crear Estudiante</a></p>
+    </div>
+
+    <table class="table table-primary table-hover table-bordered">
+        <thead class="table-light">
+        <tr style="text-align: center;">
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Correo</th>
+            <th>Carrera</th>
+            <th>Acciones</th>
+        </tr>
+        </thead>
+        <tbody style="text-align: center;">
+        <tr th:each="estudiante : ${estudiantes}">
+            <td th:text="${estudiante.nombre}"></td>
+            <td th:text="${estudiante.apellido}"></td>
+            <td th:text="${estudiante.correo}"></td>
+            <td th:text="${estudiante.carrera}"></td>
+
+            <td>
+                <a class="btn btn-primary btn-xs" th:href="@{/estudiantes/editar/{id}(id=${estudiante.id})}" th:text="'Editar'"></a> |
+                <a class="btn btn-danger btn-xs" th:href="@{/estudiantes/eliminar/{id}(id=${estudiante.id})}" th:text="'Eliminar'"
+                   onclick="return confirm('¿Estás seguro que quieres eliminar este estudiante?');"></a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
