--- a/S14/PRJ_SPRING_BOOT_SECURITY_II/src/main/resources/templates/index.html
+++ b/S14/PRJ_SPRING_BOOT_SECURITY_II/src/main/resources/templates/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="layout/layout :: head">
 </head>
+
 <body>
-$END$
+
+<header th:replace="layout/layout :: header"></header>
+
+<div class="container">
+    <h1 th:text="#{text.index.titulo}">Bienvenido al sistema</h1>
+</div>
+
+<footer th:replace="layout/layout :: footer"></footer>
 </body>
 </html>
